--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,17 +1,12 @@
 <mat-toolbar class="header mat-elevation-z4">
     <span>
-        <a>
+        <a routerLink="/">
             <img class="logo" src="assets\logo.png" alt="logo">
         </a>
     </span>
     <span class="title-group">
         <a>
-            <i class="material-icons">person</i> PetOwners
-        </a>
-    </span>
-    <span class="title-group">
-        <a>
-            <i class="material-icons">pets</i> Pets
+            PetDream
         </a>
     </span>
 </mat-toolbar>
