--- a/frontend/src/app/views/petowner-crud/petowner-crud.component.html
+++ b/frontend/src/app/views/petowner-crud/petowner-crud.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button (click)="navigateToPetOwnerCreate()">
+<button mat-raised-button (click)="navigateToPetOwnerCreate()" color="primary">
     New Pet Owner
 </button>
 
